<resources>
    <string name="app_name" translatable="false">Homework2</string>
    <string name="login_en">Login To Your Account</string>
    <string name="email_en">Email</string>
    <string name="Password_en">Password</string>
    <string name="Lonig_en">LONIG</string>
    <string name="Don_en">Do not have an account Register</string>
    <string name="login_success">login success</string>
    <string name="login_faild">Ivalid email or password</string>


</resources>
